Done, with authentication and request microservice, Failed- gateway, Not tested- digilocker