@@ -1,35 +1,25 @@
 package com.fintust.canara.gateway.config;
 
 import org.springframework.context.annotation.Bean;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.reactive.CorsWebFilter;
-import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
-
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
-import java.util.Arrays;
+
 import java.util.List;
 
 @Configuration
 public class CorsConfig {
+
     @Bean
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(
-            "http://localhost:3000",
-            "http://localhost:4200",
-            "https://your-frontend-domain.com"
-        ));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList(
-            "Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin",
-            "Access-Control-Request-Method", "Access-Control-Request-Headers"
-        ));
-        config.setExposedHeaders(Arrays.asList("Location", "Authorization"));
-        config.setAllowCredentials(true);
-        config.setMaxAge(3600L);
+        config.addAllowedOriginPattern("*"); // Allow all origins
+        config.addAllowedMethod("*"); // Allow all methods
+        config.addAllowedHeader("*"); // Allow all headers
+        config.setExposedHeaders(List.of("*")); // Expose all headers
+        config.setAllowCredentials(true); // Allow credentials
+        config.setMaxAge(3600L); // Cache for 1 hour
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
